--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/tonioha/sssf-project#readme",
   "dependencies": {
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.9"
